Issue#69 fixed the spacing at the top of the table

--- a/assets/css/test.css
+++ b/assets/css/test.css
@@ -92,3 +92,6 @@ th{
     display: inline;
     font-size: 80%;
 }
+.table td, .table th {
+    border-top: 0px; 
+}
